add the plan for correlational anlaysis

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -55,6 +55,7 @@ output            :
 ---
 
 ```{r setup, include = FALSE}
+#rm(list = ls())
 #library("papaja")
 source('Initial.r')
 curDir = here::here() #dirname(rstudioapi::getActiveDocumentContext()$path)
@@ -3227,9 +3228,9 @@ df.res.meta.rt_val <- df.res.meta.all_val %>% dplyr::filter(DVtype == 'RT') %>%
 p_meta_dprime_val <- ggplot(df.res.meta.dprime_val, aes(x=Group, y=Cohen_d, fill=EffectType)) + 
   geom_bar(stat="identity", color=NA, 
            position=position_dodge()) +
-  geom_errorbar(aes(ymin=Cohen_d-se, ymax=Cohen_d+se), width=.2,
+  geom_errorbar(aes(ymin=Cohen_d - 1.96*se, ymax = Cohen_d + 1.96*se), width=.2,
                  position=position_dodge(.9)) +
-  coord_cartesian(ylim=c(-0.2, 0.9))+
+  coord_cartesian(ylim=c(-0.2, 1))+
   scale_color_brewer(palette = "Dark2")+
   scale_fill_brewer(palette = "Dark2")+
   ylab(expression(paste("Cohen' d of ",italic("d"), "prime", sep = ' ')))+
@@ -3238,9 +3239,9 @@ p_meta_dprime_val <- ggplot(df.res.meta.dprime_val, aes(x=Group, y=Cohen_d, fill
 p_meta_rt_val <- ggplot(df.res.meta.rt_val, aes(x=Group, y=Cohen_d, fill=EffectType)) + 
   geom_bar(stat="identity", color=NA, 
            position=position_dodge()) +
-  geom_errorbar(aes(ymin=Cohen_d-se, ymax=Cohen_d+se), width=.2,
+  geom_errorbar(aes(ymin=Cohen_d - 1.96*se, ymax=Cohen_d + 1.96*se), width=.2,
                  position=position_dodge(.9)) +
-  coord_cartesian(ylim=c(-0.9, 0.2))+
+  coord_cartesian(ylim=c(-1, 0.2))+
   scale_y_reverse()+
   scale_color_brewer(palette = "Dark2")+
   scale_fill_brewer(palette = "Dark2")+
@@ -3251,9 +3252,9 @@ p_meta_rt_val <- ggplot(df.res.meta.rt_val, aes(x=Group, y=Cohen_d, fill=EffectT
 p_meta_id <- ggplot(df.res.meta.all_id, aes(x=DVtype, y=Cohen_d, fill=Group)) + 
   geom_bar(stat="identity", color=NA, 
            position=position_dodge()) +
-  geom_errorbar(aes(ymin=Cohen_d-se, ymax=Cohen_d+se), width=.2,
+  geom_errorbar(aes(ymin=Cohen_d - 1.96*se, ymax = Cohen_d + 1.96*se), width=.2,
                  position=position_dodge(.9)) +
-  coord_cartesian(ylim=c(-0.7, 0.7))+
+  coord_cartesian(ylim=c(-1, 1))+
   scale_color_brewer(palette = "Dark2")+
   scale_fill_brewer(palette = "Dark2")+
   ylab(expression(paste("Cohen' d", sep = ' ')))+
@@ -3277,11 +3278,11 @@ multiplot(p_meta_rt_val, p_meta_dprime_val, cols = 2)
 
 Figure \@ref(fig:meta-all-val) shows meta-analytic results for the effect of *d* prime and reaction times from Good-Bad, Good-Neutral, and Neutral-Bad contrast. 
 
-Across all experiments, we found that the good-association condition has advantage over bad conditions for both RT (Cohen's d = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Bad']`]). Also the good-association has advantages over the neutral condition for both RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Good_Neut']`]). But the neutral condition did not differ from the bad conditions for d prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']`]) but slightly faster on RT, RT Cohen's (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$EffectType == 'Neut_Bad']`]).
+Across all experiments, we found that the good-association condition has advantage over bad conditions for both RT (Cohen's d = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Bad']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Bad']`]). Also the good-association has advantages over the neutral condition for both RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Neut']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Good_Neut']`]). But the neutral condition did not differ from the bad conditions for d prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Neut_Bad']`]) but slightly faster on RT, RT Cohen's (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Overall' & df.res.meta.all$Effect == 'Neut_Bad']`]).
 
-When we distinguish between self-referential and other-referential conditions, it is clear that the over all effect was mainly stem from the self-referential conditions: The good-association condition has advantage over bad conditions for both RT (Cohen's d = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Bad']`]), and over neutral condition for both  both RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Good_Neut']`]), but not for the *d* prime between neutral and bad on RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']`]) or *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$EffectType == 'Neut_Bad']`]). 
+When we distinguish between self-referential and other-referential conditions, it is clear that the over all effect was mainly stem from the self-referential conditions: The good-association condition has advantage over bad conditions for both RT (Cohen's d = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Bad']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Bad']`]), and over neutral condition for both  both RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Neut']`]) and *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Good_Neut']`]), but not for the *d* prime between neutral and bad on RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Neut_Bad']`]) or *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Self' & df.res.meta.all$Effect == 'Neut_Bad']`]). 
 
-For the other condition, no differences were observed for *d* prime: Good vs. Bad  (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']`]); good vs. neutral (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']`]); neutral vs. bad (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']`]). But the effect on RT has the similar pattern as the overall effect, with much small effect size on Good vs. Bad, (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Bad']`]) and Good vs. Neutral, (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Good_Neut']`]), and similar effect size on neutral vs. bad condition,  (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$EffectType == 'Neut_Bad']`]).
+For the other condition, no differences were observed for *d* prime: Good vs. Bad  (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Bad']`]); good vs. neutral (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Neut']`]); neutral vs. bad (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Neut_Bad']`]). But the effect on RT has the similar pattern as the overall effect, with much small effect size on Good vs. Bad, (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Bad']`]) and Good vs. Neutral, (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Neut']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Neut']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Good_Neut']`]), and similar effect size on neutral vs. bad condition,  (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Neut_Bad']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Neut_Bad']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Group == 'Other' & df.res.meta.all$Effect == 'Neut_Bad']`]).
 
 ```{r 'meta-all-self-ref', fig.cap="Meta-analysis of RT and *d* prime for self-referential effect.", fig.height=6, fig.width=9, fig.align="center", warning=FALSE}
 
@@ -3292,15 +3293,32 @@ p_meta_id
 
 Figure \@ref(fig:meta-all-self-ref) shows meta-analytic results for the effect of *d* prime and reaction times from Good-Bad, Good-Neutral, and Neutral-Bad contrast. 
 
+As for the self-relevance effect, we found that there was no overall self-relevance effect on both *d* prime (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Effect == 'Self_Other']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Effect == 'Self_Other']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Effect == 'Self_Other']`]) and RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Effect == 'Self_Other']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Effect == 'Self_Other']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Effect == 'Self_Other']`]). When looking at different valence conditions, we found that self condition was performed better than the other condition for the good condition for *d* (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Effect == 'Self_Other_G']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Effect == 'Self_Other_G']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'dprime' & df.res.meta.all$Effect == 'Self_Other_G']`]), and also marginal for RT (Cohen's *d* = `r df.res.meta.all$Cohen_d[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Effect == 'Self_Other_G']`, 95%CI[`r df.res.meta.all$CI_low[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Effect == 'Self_Other_G']` `r df.res.meta.all$CI_upp[df.res.meta.all$DVtype == 'RT' & df.res.meta.all$Effect == 'Self_Other_G']`]). but not for neutral or bad conditions. see Figure \@ref(fig:meta-all-self-ref). 
 
 # Behavioral-Traits correlation analysis
 
 We also analyzed the relationship between behavioral response and self-reported psychological traits. First, we conducted repeated measure ANOVAs for the psychological distance across all experiment, to check the validity of psychological distance. We predicted that the distance between self and good person should be the shortest, while self and bad-person would show longest distance. Second, we conducted a correlation analysis for behavioral data and score data, i.e., between psychological distance and the bias in perceptual matching task. 
 
+## Methods
+### Data
+All data were collected after participants finished the behavioral tasks. In some experiments, the participants were also asked to re-filled the questionnaire after about 4 weeks. All the detailed information of these questionnaire data can be found in Liu et al. (2019, https://psyarxiv.com/7ngey/).
 
+### Data Analysis
+We reported all the reliability of the questionnaires. Then we calculated the correlation between the data from behavioral task and the questionnaire data. 
+
+For the behavioral task part, we derived different indices. First, we used the mean and SD of the RT data from each participants of each condition. We included the RT variation because it has been shown to be meaningful as individual differences [Jensen, 1992; Ouyang et al., 2017]. Second, we used drift diffusion model to estimate four parameters of DDM for each participants. Third, we also calculated the differences between different conditions (valence effect: good-self vs. bad-self, good-self vs. neutral-self, bad-self vs. neutral-self; good-other vs. bad-other, good-other vs. neutral-other, bad-other vs. neutral-other; Self-reference effect: good-self vs. good-other, neutral-self vs. neutral-other, bad-self vs. bad-other), as indexed by Cohen's d and se of Cohen's d.
+
+For the questinnaire part, we are most interested in the self-rated distance between different person. Other questionnaire were not intended to correlated with behavioral data, but we explored the results that might be theoretically interest, e.g., self-esteem, moral identity.
+
+```{r prepare correlational data,}
+# prepare questionnare data
+
+# prepare behavioral task data
+
+```
 
 # References
-```{r create_r-references}
+```{r create_r-references, echo=FALSE,results='hide'}
 r_refs(file = "r-references.bib")
 ```
 
