--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -864,7 +864,7 @@ The self-referential effect was also calculated overall as well as under three v
 
 Figure \ref{fig:meta-all-val} shows meta-analytic results for the effect of \emph{d} prime and reaction times from Good-Bad, Good-Neutral, and Neutral-Bad contrast.
 
-Across all experiments, we found that the good-association condition has advantage over bad conditions for both RT (Cohen's d = , 95\%CI{[} {]}) and \emph{d} prime (Cohen's \emph{d} = , 95\%CI{[} {]}). Also the good-association has advantages over the neutral condition for both RT (Cohen's \emph{d} = , 95\%CI{[} {]}) and \emph{d} prime (Cohen's \emph{d} = , 95\%CI{[} {]}). But the neutral condition did not differ from the bad conditions for d prime (Cohen's \emph{d} = , 95\%CI{[} {]}) but slightly faster on RT, RT Cohen's (Cohen's \emph{d} = , 95\%CI{[} {]}).
+Across all experiments, we found that the good-association condition has advantage over bad conditions for both RT (Cohen's d = -0.51, 95\%CI{[}-0.65 -0.37{]}) and \emph{d} prime (Cohen's \emph{d} = 0.23, 95\%CI{[}0.15 0.32{]}). Also the good-association has advantages over the neutral condition for both RT (Cohen's \emph{d} = -0.39, 95\%CI{[}-0.54 -0.23{]}) and \emph{d} prime (Cohen's \emph{d} = 0.27, 95\%CI{[}0.14 0.40{]}). But the neutral condition did not differ from the bad conditions for d prime (Cohen's \emph{d} = -0.03, 95\%CI{[}-0.13 0.08{]}) but slightly faster on RT, RT Cohen's (Cohen's \emph{d} = -0.11, 95\%CI{[}-0.21 -0.01{]}).
 
 When we distinguish between self-referential and other-referential conditions, it is clear that the over all effect was mainly stem from the self-referential conditions: The good-association condition has advantage over bad conditions for both RT (Cohen's d = , 95\%CI{[} {]}) and \emph{d} prime (Cohen's \emph{d} = , 95\%CI{[} {]}), and over neutral condition for both both RT (Cohen's \emph{d} = , 95\%CI{[} {]}) and \emph{d} prime (Cohen's \emph{d} = , 95\%CI{[} {]}), but not for the \emph{d} prime between neutral and bad on RT (Cohen's \emph{d} = , 95\%CI{[} {]}) or \emph{d} prime (Cohen's \emph{d} = , 95\%CI{[} {]}).
 
@@ -880,6 +880,8 @@ For the other condition, no differences were observed for \emph{d} prime: Good v
 \end{figure}
 
 Figure \ref{fig:meta-all-self-ref} shows meta-analytic results for the effect of \emph{d} prime and reaction times from Good-Bad, Good-Neutral, and Neutral-Bad contrast.
+
+As for the self-relevance effect, we found that there was no overall self-relevance effect on both \emph{d} prime (Cohen's \emph{d} = 0.08, 95\%CI{[}-0.24 0.40{]}) and RT (Cohen's \emph{d} = -0.10, 95\%CI{[}-0.54 0.33{]}). When looking at different valence conditions, we found that self condition was performed better than the other condition for the good condition for \emph{d} (Cohen's \emph{d} = 0.40, 95\%CI{[}0.09 0.71{]}), and also marginal for RT (Cohen's \emph{d} = -0.36, 95\%CI{[}-0.79 0.07{]}). but not for neutral or bad conditions. see Figure \ref{fig:meta-all-self-ref}.
 
 \hypertarget{behavioral-traits-correlation-analysis}{%
 \section{Behavioral-Traits correlation analysis}\label{behavioral-traits-correlation-analysis}}
